# b-lora-flux

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  chapter2_literature_review.tex  chapter4_datasets.tex  infra.env.template  literature_review.md  phys-bib.bib  pyproject.toml
.dvc/: config
chapters/snippets/: phase5_2_f02.tex  phase6_m01b3.tex
configs/: download.yaml
configs/analysis/: block_analysis.yaml
configs/data/: datasets.yaml
configs/eval/: f02_metrics.yaml  generate.yaml  metrics.yaml  mixing.yaml  mixing_metrics.yaml  mixing_sdxl.yaml
configs/experiments/: a01_blocks_34_37.yaml  a02_blocks_30_37.yaml  a03_blocks_24_37.yaml  a04_blocks_19_37.yaml  b01_rank_4.yaml  b02_rank_8.yaml  b03_rank_16.yaml  b04_rank_32.yaml  base_flux_lora.yaml  c01_steps_100.yaml  c02_steps_250.yaml  c03_steps_500.yaml  c04_steps_1000.yaml  d01_double_stream_1000steps.yaml  d02_double_stream_2000steps.yaml  d03_double_stream_rank32.yaml  da01_ds_blocks_0_6.yaml  da02_ds_blocks_0_12.yaml  da03_ds_blocks_0_18.yaml  da04_ds_blocks_6_18.yaml  db01_rank_4.yaml  db02_rank_16.yaml  db03_rank_32.yaml  db04_rank_64.yaml  dc01_steps_500.yaml  dc02_steps_1000.yaml  dc03_steps_2000.yaml  dc04_steps_4000.yaml  dc_content_early_ds.yaml  dc_content_from_p0.yaml  dc_content_late_ds.yaml  dp01_prompt_sks.yaml  dp02_prompt_sks_class.yaml  dp03_prompt_v.yaml  dp04_prompt_v_class.yaml  e00_no_lora_baseline.yaml  e01_blora_flux_monet_img1.yaml  e01_blora_flux_monet_img2.yaml  e01_blora_flux_monet_img3.yaml  e01_blora_flux_monet_img4.yaml  (+52 more)
dags/: blora_flux_group_pipeline.py  blora_flux_pipeline.py
dags/jobs/generate_blora/: generate_blora_preset.yml.template
dags/jobs/generate_blora/files/: generate_job_script.sh  s3cfg.template
dags/jobs/metrics_blora/: metrics_blora_preset.yml.template
dags/jobs/metrics_blora/files/: metrics_job_script.sh
dags/jobs/mixing_sdxl_f02/: mixing_sdxl_f02_preset.yml.template
dags/jobs/mixing_sdxl_f02/files/: mixing_sdxl_f02_job_script.sh
dags/jobs/train_blora/: train_blora_preset.yml.template
dags/jobs/train_blora/files/: train_job_script.sh
dags/plugins/: job_runner_wrapper.py
data/: .gitignore  artbench10.dvc  coco_prompts.txt.dvc  coco_val2017.dvc  dreambooth_dog.dvc  dreambooth_subjects.dvc  eval_content.dvc  styles.dvc  styles_cropped.dvc
experiments/: datasets.md  plan.md
experiments/data/: b_lora_eval_pairs.json  block_analysis_prompts.json  limitations_prompts.json
output/analysis/: block_analysis_config.yaml  block_analysis_report.md  block_analysis_results.json
output/results/: d01_double_stream_1000steps_visual.json  d02_double_stream_2000steps_visual.json  d03_double_stream_rank32_visual.json  da01_ds_blocks_0_6_visual.json  da02_ds_blocks_0_12_visual.json  da03_ds_blocks_0_18_visual.json  da04_ds_blocks_6_18_visual.json  db01_rank_4.json  db01_rank_4_visual.json  db02_rank_16.json  db02_rank_16_visual.json  db03_rank_32.json  db03_rank_32_visual.json  db04_rank_64.json  db04_rank_64_visual.json  dc01_steps_500_visual.json  dc02_steps_1000_visual.json  dc03_steps_2000_visual.json  dc04_steps_4000_visual.json  dp01_prompt_sks_visual.json  dp02_prompt_sks_class_visual.json  dp03_prompt_v_visual.json  dp04_prompt_v_class_visual.json  e00_no_lora_baseline_visual.json  e01_blora_flux_monet_img1_visual.json  e01_blora_flux_van_gogh_img1_visual.json  e02_full_lora_flux_monet_img1_visual.json  e02_full_lora_flux_van_gogh_img1_visual.json  e03_splitflux_monet_visual.json  e03_splitflux_van_gogh_visual.json  e04_blora_sdxl_van_gogh_img1_visual.json  e04_blora_sdxl_van_gogh_img2_visual.json  e04_blora_sdxl_van_gogh_img3_visual.json  e04_blora_sdxl_van_gogh_img4_visual.json  f02_blora_sdxl_pairs.json  f02_blora_sdxl_pairs_visual.json  m01_content_backpack_visual.json  m01_content_cat_visual.json  m01_content_dog_visual.json  m01_mixing_grid_v1_visual.json  (+4 more)
scripts/: check_connectivity.py  check_env.py  download_datasets.py  make_architecture_diagram.py  make_presentation_figures.py  smoke_run.sh  update_exp_plan.py
scripts/analysis/: block_analysis.py
scripts/data/: build_eval_pairs.py  download_artbench_genres.py  make_center_crops.py
scripts/eval/: compute_f02_metrics.py  compute_metrics.py  compute_mixing_metrics.py  generate_images.py  generate_mixing.py  generate_mixing_sdxl.py  limitations_eval.py
tests/: conftest.py  test_dag_parsing.py  test_imports.py  test_results_processing.py  test_smoke_config.py
thesis/: appendix_a_stack.tex  appendix_only.tex  chapter1_introduction.tex  chapter2_literature_review.tex  chapter3_method.tex  chapter4_datasets.tex  chapter4_eval_protocol.tex  chapter4_preprocessing.tex  chapter5_results.tex  conclusion.tex  main.tex  packages.tex  phys-bib.bib  preferences.tex  zadanie_na_vkr.tex  zadanie_na_vkr.txt
