[tool.poetry]
name = "blora-flux"
version = "0.1.0"
description = "B-LoRA for Style Transfer in DiT-based Generative Models (FLUX)"
readme = "README.md"
authors = []
requires-poetry = ">=2.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"


# ML core (run on H100)
# NOTE: pinned to cu121 wheels — host driver is 535.x (max CUDA 12.2);
# default PyPI torch wheels (cu13x) are incompatible with this driver.
torch = { version = "2.5.1+cu121", source = "pytorch-cu121" }
torchvision = { version = "0.20.1+cu121", source = "pytorch-cu121" }
diffusers = ">=0.30.0"
transformers = ">=4.44.0"
accelerate = ">=0.33.0"
peft = ">=0.12.0"
safetensors = ">=0.4.0"

# Metrics (run on H100)
torchmetrics = ">=1.4.0"
lpips = ">=0.1.4"
clean-fid = ">=0.1.35"

# Data
datasets = ">=2.20.0"
Pillow = ">=10.0.0"


# Config / experiment tracking
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
clearml = "^1.16.4"

# Data versioning
dvc = { version = "^3.54.0", extras = ["s3"] }
dulwich = ">=0.21.7"

# AWS / S3
boto3 = ">=1.34.0"
s3cmd = "*"

# HTTP (dataset download)
httpx = ">=0.27.0"

# Typing backport
typing-extensions = ">=4.9.0"

# YAML (oyaml: order-preserving YAML for ai-toolkit config loading)
PyYAML = ">=6.0"
oyaml = ">=1.0"

# Dev tooling
black = "^24.1.1"
ruff = "^0.6.9"
mypy = "1.8.0"
pytest = "^8.3.0"
mdformat = "^0.7.17"
yamlfix = "^1.16.0"
yamllint = "^1.35.0"
pre-commit = "^3.7.0"
pyclean = "^2.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tool configs (kept in sync with tfusion-reseach-template)
# ---------------------------------------------------------------------------

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120

lint.select = [
    "W",
    "F",
    "E",
    "I",  # isort
]

lint.preview = true

lint.ignore = [
    "E203",  # whitespace before ':' (conflicts with Black)
]

exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "notebooks",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
implicit_reexport = true
exclude = '(^\.venv)|(notebooks)'

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "clearml.*",
    "torch.*",
    "torchvision.*",
    "diffusers.*",
    "transformers.*",
    "accelerate.*",
    "peft.*",
    "safetensors.*",
    "datasets.*",
    "torchmetrics.*",
    "lpips.*",
    "clean_fid.*",
    "cleanfid.*",
]
ignore_missing_imports = true

[tool.yamlfix]
allow_duplicate_keys = true
comments_min_spaces_from_content = 2
comments_require_starting_space = true
whitelines = 0
comments_whitelines = 1
section_whitelines = 1
explicit_start = false
sequence_style = "block_style"
line_length = 120
none_representation = "null"
quote_basic_values = false
quote_keys_and_basic_values = false
quote_representation = "'"
preserve_quotes = true

[tool.pytest.ini_options]
markers = [
    "fast: quick unit tests",
    "slow: slow tests (model loading, dataset download)",
]

[[tool.poetry.source]]
name = "tinkoff_pypi"
url = "https://artifactory.tcsbank.ru/artifactory/api/pypi/python-all/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
